tests/specs/ecosystem/ydcjeff/ezedge/0_0_6.test
ydcjeff/ezedge/0.0.6
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
Check file://<tmpdir>/runtime/mod.ts
Check file://<tmpdir>/vite/mod.ts
error: TS2304 [ERROR]: Cannot find name 'HTMLElement'.
 */ export function start_client(import_meta_url: string, fn: (el: HTMLElement, hydratable: boolean, data: unknown | null) => void): void {}
                                                                   ~~~~~~~~~~~
    at file://<tmpdir>/runtime/mod.ts:6:68

